遍历读取不会阻塞了,写入mysql 是否还能优化 ,Executors 手动创建

--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.sixlengs.path2mysql.Processor</mainClass>
+                            <mainClass>com.sixlengs.path2mysql.ProcessorForkJoin</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
